--- a/style.css
+++ b/style.css
@@ -1,40 +1,66 @@
-html{
-    background: black;
-}
-h1{
-    color: white;
-}
-h2{
-    color: white;
-}
-h3{
-    color: white;
-}
-a{
-    color: white;
-}
-
-
-/* Classes */
-.topNavBar{
+body {
+    font-family: "Poppins", sans-serif;
+    margin: 50px 50px 0 50px;
+    background-color: #faf9f6;
     display: flex;
-    gap: 50px;
-    border: solid;
-    border-color: red;
-    width: 100%;
-}
-
-.photoNameBlock{
-    border: solid;
-    border-color: blue;
-
-}
-.photoNameBlock>img{
-    max-height: 400px;
-    border-radius: 40px;
-}
-.projects{
-    border: solid;
-    border-color: greenyellow;
-}
-
+    flex-direction: column;
+    min-height: 95vh;
+  }
+  .main {
+    flex: 1;
+  }
+  
+  h1 {
+    font-size: 5rem;
+  }
+  
+  footer {
+    text-align: right;
+    color: midnightblue;
+  }
+  
+  .card {
+    width: 45%;
+  }
+  
+  .left {
+    float: left;
+  }
+  
+  .right {
+    float: right;
+  }
+  
+  .tile-image {
+    height: 200px;
+    float: left;
+    margin-right: 50px;
+  }
+  
+  .auto-type{
+    color: midnightblue;
+  }
+  
+  @media (max-width:680px){
+    .logo{
+      width:200px;
+    }
+    h1 {
+      font-size: 4rem;
+      text-align: center;
+    }
+    .card{
+      display: block;
+      width: 100%;
+      margin-bottom: 30px;
+      text-align: justify;
+    }
+  
+    .card img{
+      display: inline;
+      width: 100%;
+      margin-bottom: 10px;
+      object-fit: cover;
+    }
+  
+  }
