--- a/style.css
+++ b/style.css
@@ -238,6 +238,10 @@ section.services .card-grid .card:hover p {
   padding-bottom: 50px;
 }
 
+.hero{
+  padding-left: 20px;
+}
+
 /* TO DO:
 
   Turn nav bar into hamburger drop down
