--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ section.services {
   margin-bottom: 1rem;
   line-height: 0.5rem;
   color: var(--primary);
+  
 }
 .services-head + p {
   color: var(--white);
@@ -128,6 +129,11 @@ section.services {
   text-align: center;
   margin-bottom: 6rem;
   font-weight: 400;
+}
+.services a {
+  color: var(--primary);
+  text-decoration: none;
+  
 }
 .card img {
   width: 50px;
