--- a/project_style.css
+++ b/project_style.css
@@ -2,6 +2,7 @@
     --primary: rgb(29, 221, 189);
     --bgDark: rgb(12, 12, 12);
     --white: rgb(250, 250, 250);
+    --black: rgb(0, 0, 0);
     --secondary: rgb(0, 59, 50);
     --bgLight: rgb(190, 181, 181);
   }
@@ -18,156 +19,135 @@ body {
     font-family: "Poppins", sans-serif;
     margin: 50px 50px 0 50px;
     background-color: var(--bgDark);
-    display: flex;
-    flex-direction: column;
     min-height: 95vh;
-  }
-
-
-  .main {
-    flex: 1;
-  }
-  
-  h1 {
-    font-size: 5rem;
-    color: var(--white);
-  }
-
-  h2{
-    color: var(--primary);
-  }
-  p{
-    color: var(--white);
-    margin-bottom: 2rem;
-  }
-  
-  footer {
-    text-align: right;
-    color: midnightblue;
-  }
-  
-  .card {
-    width: 45%;
-  }
-  
-  .left {
-    float: left;
-  }
-  
-  .right {
-    float: right;
-  }
-  
-  .tile-image {
-    height: 200px;
-    float: left;
-    margin-right: 50px;
-    margin-top: 2rem;
-  }
-  
-  .creative{
-    color: var(--primary);
     
   }
 
-  .card-links{
-    display: inline;
-  }
-
-  .flex {
+.navbar {
+    background-color: var(--bgDark);
+    overflow: hidden;
     display: flex;
-  }
-  .items-centre {
-    align-items: center;
-  }
-  .justify-between {
     justify-content: space-between;
-  }
+}
 
-  header nav .left a {
+.navbar a {
+    display: inline-block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.navbar a:hover {
+    background-color:var(--bgDark);
+    color: black;
+}
+
+
+header .navbar a {
+  color: var(--white);
+  text-decoration: none;
+  margin-right: 2rem;
+  text-transform: uppercase;
+  transition: all 0.2s ease;
+}
+
+header .navbar a:hover {
+  color: var(--primary);
+}
+header .navbar {
+  padding: 1rem 0;
+}
+
+.btn {
+  padding: 0.5rem 2rem;
+  font-size: 1rem;
+  font-weight: 600;
+  border: 2px solid transparent;
+  outline: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: all 0.2s ease;
+}
+.btn a{
+  text-decoration: none;
+}
+.btn-primary {
+  background-color: var(--primary);
+  color: var(--secondary);
+}
+.btn-primary:hover {
+  background: transparent;
+  border-color: var(--primary);
+  color: var(--primary);
+}
+.flex-1 {
+  flex: 1;
+}
+.btn-secondary {
+  background: transparent;
+  color: var(--primary);
+  border-color: var(--primary);
+}
+.btn-secondary:hover {
+  background: var(--primary);
+  color: var(--secondary);
+}
+
+.projects-title {
+  font-size: 5rem;
+  color: var(--white);
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.projects-subtitle {
+  font-size: 1.2rem;
+  color: var(--primary);
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    gap: 20px;
+}
+
+.grid-item {
+    /* border: 3px solid var(--primary); */
+    /* background-color: var(--white); */
+    padding: 20px;
+    text-align: center;
+    border-radius: 2%;
+}
+
+.grid-item img {
+    max-width: 400px;
+    height: 300px;
+    object-fit: cover;
+}
+
+.title {
+    font-weight: bold;
     color: var(--white);
-    text-decoration: none;
-    margin-right: 2rem;
-    text-transform: uppercase;
-    transition: all 0.2s ease;
-  }
-  header nav .left a:hover {
-    color: var(--primary);
+    margin-bottom: 10px;
+    font-size: larger;
+}
+
+.text {
+    color: var(--white);
+    font-weight: bold;
+}
+
+/* Media queries for mobile responsiveness */
+@media screen and (max-width: 768px) {
+  .grid {
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   }
 
-  .btn {
-    padding: 0.6rem 2rem;
-    font-size: 1rem;
-    font-weight: 600;
-    border: 2px solid transparent;
-    outline: none;
-    cursor: pointer;
-    text-transform: uppercase;
-    transition: all 0.2s ease;
+  .grid-item img {
+      max-width: 100%;
+      height: auto;
   }
-  .btn a{
-    text-decoration: none;
-  }
-  .btn-primary {
-    background-color: var(--primary);
-    color: var(--secondary);
-    margin-top: -15rem;
-  }
-  .btn-primary:hover {
-    background: transparent;
-    border-color: var(--primary);
-    color: var(--primary);
-  }
-  .flex-1 {
-    flex: 1;
-  }
-  .btn-secondary {
-    background: transparent;
-    color: var(--primary);
-    border-color: var(--primary);
-  }
-  .btn-secondary:hover {
-    background: var(--primary);
-    color: var(--secondary);
-  }
-
-  body a {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 35px;
-    margin-right: 0.8rem;
-    border-radius: 50%;
-  }
-  body a:hover {
-    background: var(--primary);
-  }
-  
-  
-  @media (max-width:680px){
-    .logo{
-      width:200px;
-    }
-    h1 {
-      font-size: 4rem;
-      text-align: center;
-    }
-    .card{
-      display: block;
-      width: 100%;
-      margin-bottom: 30px;
-      text-align: justify;
-    }
-  
-    .card img{
-      display: inline;
-      width: 100%;
-      margin-bottom: 10px;
-      object-fit: cover;
-    }
-
-    p{
-        margin-bottom: 0.5rem;
-    }
-  
-  }
+}
