--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+/* Global styles */
+
+/* Reset */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  scroll-behavior: smooth;
+}
+
 :root {
   --primary: rgb(29, 221, 189);
   --bgDark: rgb(12, 12, 12);
@@ -6,100 +17,121 @@
   --bgLight: rgb(190, 181, 181);
 }
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  scroll-behavior: smooth;
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: var(--bgDark);
 }
+
+.container {
+  max-width: 1152px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
 header {
   background-color: var(--bgDark);
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 73% 94%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
 }
-header nav .left a {
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20px;
+}
+
+nav .left a {
   color: var(--white);
   text-decoration: none;
   margin-right: 2rem;
   text-transform: uppercase;
   transition: all 0.2s ease;
 }
-header nav .left a:hover {
+
+nav .left a:hover {
   color: var(--primary);
 }
-header nav {
-  padding: 2rem 0;
-}
-header nav .logo {
+
+nav .logo {
   margin-right: 3rem;
 }
 
-body {
-  font-family: "Poppins", sans-serif;
+.right {
+  margin-left: auto;
 }
-.container {
-  max-width: 1152px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
+
 .hero {
-  padding-top: 2rem;
-  padding-bottom: 3rem;
+  padding: 2rem 0;
+  display: flex;
+  align-items: center;
 }
+
 .hero .left img {
   width: 400px;
   height: 600px;
   margin: 70px;
 }
+
 .hero .right {
   color: var(--white);
   margin-top: -7rem;
 }
+
 .hero .right h6 {
   font-size: 1.6rem;
   color: var(--primary);
   margin-bottom: 0.5rem;
 }
+
 .hero .right h1 {
   font-size: 4rem;
   font-weight: 100;
   line-height: 1.2;
   margin-bottom: 2rem;
 }
+
 .hero .right h1 span {
   color: var(--primary);
 }
+
 .hero .right p {
   line-height: 1.9;
   margin-bottom: 2rem;
 }
 
-section {
+.about {
   padding: 6rem;
+  background: var(--white);
 }
-section.about h1 {
+
+.about h1 {
   margin-bottom: 1rem;
   font-size: 1.6rem;
   font-weight: 600;
 }
-section.about h1 span {
+
+.about h1 span {
   color: var(--primary);
 }
-section.about h3 {
+
+.about h3 {
   font-size: 1rem;
   margin-bottom: 1rem;
   font-weight: 600;
 }
-section.about p {
+
+.about p {
   font-family: "Lato", sans-serif;
   color: var(--secondary);
   line-height: 1.9rem;
   margin-bottom: 2rem;
 }
-section.about .socials {
+
+.about .socials {
   display: flex;
 }
-section.about .socials a {
+
+.about .socials a {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -107,92 +139,106 @@ section.about .socials a {
   margin-right: 0.8rem;
   border-radius: 50%;
 }
-section.about .socials a:hover {
+
+.about .socials a:hover {
   background: var(--primary);
 }
 
-section.services {
+.services {
   background: rgb(17, 17, 17);
+  padding: 6rem;
 }
+
 .services-head {
-  color: rgb(10, 9, 9);
+  color: var(--primary);
   text-align: center;
   margin-bottom: 1rem;
-  line-height: 0.5rem;
-  color: var(--primary);
-  
 }
+
 .services-head + p {
   color: var(--white);
   font-family: "Lato", sans-serif;
-  margin-bottom: 1rem;
-  text-align: center;
   margin-bottom: 6rem;
+  text-align: center;
   font-weight: 400;
 }
+
 .services a {
   color: var(--primary);
   text-decoration: none;
-  
 }
+
 .card img {
   width: 50px;
   background: white;
 }
-section.services .card-grid {
+
+.card-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 40px;
 }
-section.services .card-grid .card {
+
+.card {
   background: var(--white);
   padding: 3rem 2rem;
   position: relative;
   text-align: center;
   transition: all 0.2s ease;
 }
-section.services .card-grid .card img {
+
+.card img {
   position: absolute;
   top: -1.5rem;
   left: 50%;
   transform: translateX(-50%);
   color: var();
 }
-section.services .card-grid .card h2 {
+
+.card h2 {
   font-weight: 600;
   font-size: 1.2rem;
   margin-bottom: 0.5rem;
 }
-section.services .card-grid .card p {
+
+.card p {
   font-family: "Lato", sans-serif;
-  color: var(--seconday);
+  color: var(--secondary);
   line-height: 1.6;
 }
-section.services .card-grid .card:hover {
+
+.card:hover {
   background: var(--primary);
 }
-section.services .card-grid .card:hover h2 {
+
+.card:hover h2 {
   color: var(--white);
 }
-section.services .card-grid .card:hover p {
+
+.card:hover p {
   color: var(--white);
 }
 
 .flex {
   display: flex;
 }
+
 .items-centre {
   align-items: center;
 }
+
 .justify-between {
   justify-content: space-between;
 }
+
 .justify-center {
   justify-content: center;
 }
+
 .justify-right {
   justify-content: right;
 }
+
 .btn {
   padding: 0.6rem 2rem;
   font-size: 1rem;
@@ -203,57 +249,58 @@ section.services .card-grid .card:hover p {
   text-transform: uppercase;
   transition: all 0.2s ease;
 }
-.btn a{
+
+.btn a {
   text-decoration: none;
 }
+
 .btn-primary {
   background-color: var(--primary);
   color: var(--secondary);
   margin-top: -15rem;
 }
+
 .btn-primary:hover {
   background: transparent;
   border-color: var(--primary);
   color: var(--primary);
 }
+
 .flex-1 {
   flex: 1;
 }
+
 .btn-secondary {
   background: transparent;
   color: var(--primary);
   border-color: var(--primary);
 }
+
 .btn-secondary:hover {
   background: var(--primary);
   color: var(--secondary);
 }
 
-@media (max-width:500px){
-  
-.container{
-  display: block;
+@media (max-width: 768px) {
+  .card-grid {
+      grid-template-columns: 1fr; /* Display cards in a single column */
+      gap: 50px; /* Add some space between cards */
+  }
+
+  .card {
+      width: 100%; /* Set card width to full width */
+  }
+
+
+  /* Hide hero photo */
+  .hero .left {
+    display: none;
 }
 
-.left.flex-1.justify-center{
-  display: none;
+/* Move hero text under navigation bar */
+.hero .right {
+  margin-top: 0; /* Remove top margin */
+  padding-top: 2rem; /* Add padding to separate from navigation bar */
+  padding-left: 30px;
 }
-
-.right.flex-1{
-  padding-top: 100px;
-  padding-bottom: 50px;
-}
-
-.hero{
-  padding-left: 20px;
-}
-
-/* TO DO:
-
-  Turn nav bar into hamburger drop down
-
-  Change services blocks to block / column layout
-
-*/
-
 }
