--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 :root {
   --primary: rgb(29, 221, 189);
-  --bgDark: rgb(12, 12, 12);
+  --bgDark: rgb(0, 0, 0);
   --white: rgb(250, 250, 250);
   --secondary: rgb(0, 59, 50);
   --bgLight: rgb(190, 181, 181);
@@ -173,7 +173,7 @@ nav .logo {
 }
 
 .services {
-  background: rgb(17, 17, 17);
+  background: rgb(0, 0, 0);
   padding: 6rem;
 }
 
@@ -198,7 +198,6 @@ nav .logo {
 
 .card img {
   width: 50px;
-  background: white;
 }
 
 .card-grid {
@@ -233,6 +232,11 @@ nav .logo {
   font-family: "Lato", sans-serif;
   color: var(--secondary);
   line-height: 1.6;
+}
+
+.card a{
+  text-decoration: none;
+  color: inherit;
 }
 
 .card:hover {
