--- a/style.css
+++ b/style.css
@@ -1,414 +1,59 @@
-/* Global styles */
-
-/* Reset */
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
+:root {
+  --jumbotron-padding-y: 3rem;
   scroll-behavior: smooth;
 }
 
-:root {
-  --primary: rgb(29, 221, 189);
-  --bgDark: rgb(0, 0, 0);
-  --white: rgb(250, 250, 250);
-  --secondary: rgb(0, 59, 50);
-  --bgLight: rgb(190, 181, 181);
+.jumbotron {
+  padding-top: var(--jumbotron-padding-y);
+  padding-bottom: var(--jumbotron-padding-y);
+  margin-bottom: 0;
+  /* background-color: #fff; */
+  /* background-color: #AAD7D9; */
+  background-repeat: no-repeat;
+  background: linear-gradient(#14c7d0, #000000);
+  background-size: cover;
+  /* background-image: url(''); */
+  /* background-attachment: fixed; */
 }
-
-body {
-  font-family: "Poppins", sans-serif;
-  background-color: var(--bgDark);
-}
-
-.container {
-  max-width: 1152px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
-header {
-  background-color: var(--bgDark);
-  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
-}
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 20px;
-}
-
-nav .left a {
-  color: var(--white);
-  text-decoration: none;
-  margin-right: 2rem;
-  text-transform: uppercase;
-  transition: all 0.2s ease;
-}
-
-nav .left a:hover {
-  color: var(--primary);
-}
-
-nav .logo {
-  margin-right: 3rem;
-}
-
-.right {
-  margin-left: auto;
-}
-
-.hero {
-  padding: 2rem 0;
-  display: flex;
-  align-items: center;
-  padding-top: 50px;
-}
-
-.hero .left img {
-  width: 400px;
-  height: 600px;
-  margin: 70px;
-}
-
-.hero .right {
-  color: var(--white);
-  margin-top: -7rem;
-  padding-right: 50px;
-}
-
-.hero .right h6 {
-  font-size: 1.6rem;
-  color: var(--primary);
-  margin-bottom: 0.5rem;
-}
-
-.hero .right h1 {
-  font-size: 4rem;
-  font-weight: 100;
-  line-height: 1.2;
-  margin-bottom: 2rem;
-}
-
-.hero .right h1 span {
-  color: var(--primary);
-}
-
-.hero .right p {
-  line-height: 1.9;
-  margin-bottom: 2rem;
-}
-
-.about {
-  padding: 6rem;
-  background: var(--white);
-}
-
-/* Make about image responsive */
-.about .left img {
-  max-width: 100%;
-  margin-right: 30px;
-}
-
-/* Move about image slightly to the right */
-.about .left {
-  margin-left: 50px;
-}
-
-/* Hide the about me picture */
-.about .left {
-  display: none;
-}
-
-/* Center the text */
-.about .right {
-  text-align: center;
-}
-
-/* Center the links */
-.about .socials {
-  display: flex;
-  justify-content: center; /* Center horizontally */
-  margin-top: 20px; /* Add margin for spacing */
-}
-
-.about h1 {
-  margin-bottom: 1rem;
-  font-size: 1.6rem;
-  font-weight: 600;
-}
-
-.about h1 span {
-  color: var(--primary);
-}
-
-.about h3 {
-  font-size: 1rem;
-  margin-bottom: 1rem;
-  font-weight: 600;
-}
-
-.about p {
-  font-family: "Lato", sans-serif;
-  color: var(--secondary);
-  line-height: 1.9rem;
-  margin-bottom: 2rem;
-}
-
-.about .socials {
-  display: flex;
-}
-
-.about .socials a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 35px;
-  margin-right: 0.8rem;
-  border-radius: 50%;
-}
-
-.about .socials a:hover {
-  background: var(--primary);
-}
-
-.services {
-  background: rgb(0, 0, 0);
-  padding: 6rem;
-}
-
-.services-head {
-  color: var(--primary);
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
-.services-head + p {
-  color: var(--white);
-  font-family: "Lato", sans-serif;
-  margin-bottom: 6rem;
-  text-align: center;
-  font-weight: 400;
-}
-
-.services a {
-  color: var(--primary);
-  text-decoration: none;
-}
-
-.card img {
-  width: 50px;
-}
-
-.card-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 40px;
-}
-
-.card {
-  background: var(--white);
-  padding: 3rem 2rem;
-  position: relative;
-  text-align: center;
-  transition: all 0.2s ease;
-}
-
-.card img {
-  position: absolute;
-  top: -1.5rem;
-  left: 50%;
-  transform: translateX(-50%);
-  color: var();
-}
-
-.card h2 {
-  font-weight: 600;
-  font-size: 1.2rem;
-  margin-bottom: 0.5rem;
-}
-
-.card p {
-  font-family: "Lato", sans-serif;
-  color: var(--secondary);
-  line-height: 1.6;
-}
-
-.card a{
-  text-decoration: none;
-  color: inherit;
-}
-
-.card:hover {
-  background: var(--primary);
-}
-
-.card:hover h2 {
-  color: var(--white);
-}
-
-.card:hover p {
-  color: var(--white);
-}
-
-.flex {
-  display: flex;
-}
-
-.items-centre {
-  align-items: center;
-}
-
-.justify-between {
-  justify-content: space-between;
-}
-
-.justify-center {
-  justify-content: center;
-}
-
-.justify-right {
-  justify-content: right;
-}
-
-.btn {
-  padding: 0.6rem 2rem;
-  font-size: 1rem;
-  font-weight: 600;
-  border: 2px solid transparent;
-  outline: none;
-  cursor: pointer;
-  text-transform: uppercase;
-  transition: all 0.2s ease;
-}
-
-.btn a {
-  text-decoration: none;
-}
-
-.btn-primary {
-  background-color: var(--primary);
-  color: var(--secondary);
-  margin-top: -15rem;
-}
-
-.btn-primary:hover {
-  background: transparent;
-  border-color: var(--primary);
-  color: var(--primary);
-}
-
-/* Style for the contact link */
-.contact {
-  padding: 0.5rem 2rem; /* Same padding as the button */
-  font-size: rem; /* Same font size as the button */
-  font-weight: 600;
-  border: 2px solid transparent;
-  text-transform: uppercase;
-  transition: all 0.2s ease;
-  color: black; /* Text color */
-  background-color: var(--primary); /* Background color */
-  text-decoration: none; /* Ensure no underline for links */
-}
-
-.contact:hover {
-  background: transparent;
-  border-color: var(--primary);
-  color: var(--primary);
-}
-
-
-.flex-1 {
-  flex: 1;
-}
-
-.btn-secondary {
-  background: transparent;
-  color: var(--primary);
-  border-color: var(--primary);
-}
-
-.btn-secondary:hover {
-  background: var(--primary);
-  color: var(--secondary);
-}
-
-/* Style for the hamburger menu icon */
-.hamburger-menu {
-  display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 24px;
-  cursor: pointer;
-}
-
-.line {
-  width: 24px;
-  height: 2px;
-  background-color: var(--white);
-}
-
-@media (max-width: 900px) {
-  .card-grid {
-      grid-template-columns: 1fr; /* Display cards in a single column */
-      gap: 50px; /* Add some space between cards */
+@media (min-width: 768px) {
+  .jumbotron {
+    padding-top: calc(var(--jumbotron-padding-y) * 2);
+    padding-bottom: calc(var(--jumbotron-padding-y) * 2);
   }
-
-  .card {
-      width: 100%; /* Set card width to full width */
-  }
-
-  .hero {
-    flex-direction: column; /* Stack items vertically */
-    text-align: center; /* Center text */
-  }
-
-  /* Hide hero photo */
-  .hero .left {
-    display: none;
-    width: 100%; /* Set width to full for both left and right sections */
-    margin-bottom: 2rem; /* Add some space between sections */
 }
 
-.hero .right {
-  width: 100%; /* Set width to full for both left and right sections */
-  margin-bottom: 2rem; /* Add some space between sections */
-}
-/* Move hero text under navigation bar */
-.hero .right {
-  margin-top: 0; /* Remove top margin */
-  padding-top: 2rem; /* Add padding to separate from navigation bar */
-  padding-left: 30px;
+.jumbotron p:last-child {
+  margin-bottom: 0;
+  
 }
 
-.links {
-  display: none; /* Hide the navigation links */
+.jumbotron-heading {
+  font-weight: 00;
+  color: #FBF9F1;
+ 
 }
 
-.links.active {
-  display: flex; /* Show the navigation links when active */
-  flex-direction: column; /* Stack the links vertically */
-  background-color: var(--bgDark); /* Add background color */
-  padding: 20px; /* Add padding for spacing */
-  position: absolute; /* Position the links */
-  top: 60px; /* Adjust the top position */
-  left: 0; /* Align to the left */
-  width: 100%; /* Occupy full width */
+.jumbotron .container {
+  max-width: 40rem;
+  
 }
 
-.hamburger-menu {
-  display: flex;
-  margin-right: 1rem; /* Add margin to separate from the contact button */
+.card-img-top{
+  height: 225px;
 }
 
-.navbar {
-  justify-content: space-between; /* Align items to the start and end */
+footer {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+
 }
 
-.left {
-  justify-content: flex-start; /* Align items to the start */
+footer p {
+  margin-bottom: .25rem;
 }
 
+.box-shadow { box-shadow: 0 .25rem .75rem rgba(2, 0, 0, 0.05); }
+
+.headings{
+  color: #14c7d0;
 }
